<resources>
    <string name="app_name">TakeawayApp</string>
    <string name="action_settings">Settings</string>
    <string name="shop_name">Tony\'s Fish and Chicken Bar </string>
    <string name="social_media"> Social Media </string>
    <string name="title_activity_home">Tony\'s Takeaway</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_about_page">About</string>
    <string name="gdp"> £ </string>

    <string name="attribution">CC BY-NC 4.0 Licence http://getdrawings.com/fish-and-chips-drawing#fish-and-chips-drawing-7.png</string>

    <string name="ad_lab">Address</string>
    <string name="tel_lab">Telephone</string>
    <string name="oh_lab">Opening Hours</string>
    <string name="address"> 32 High Street, Townsville</string>
    <string name="tel"> 023654755742</string>

</resources>
