<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="329dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toTopOf="@id/fishnchips"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/fish_symbol"
            android:layout_width="116dp"
            android:layout_height="100dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/images_fishandchipsdrawing7"
            app:layout_constraintEnd_toStartOf="@+id/app_title"
            android:contentDescription="logo" />

        <TextView
            android:id="@+id/app_title"
            android:layout_width="204dp"
            android:layout_height="71dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/shop_name"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/fish_symbol"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <ImageView
        android:id="@+id/fishnchips"
        android:layout_width="337dp"
        android:layout_height="232dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:background="@android:drawable/alert_light_frame"
        android:backgroundTintMode="add"
        android:contentDescription="Fish and Chips"
        android:src="@drawable/battered_fish_and_chips"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:srcCompat="@drawable/battered_fish_and_chips" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fishnchips"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/menu_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="?attr/colorPrimaryDark"
            android:onClick="toMenu"
            android:text="@string/title_activity_menu"
            android:textColor="?attr/colorPrimary"
            android:textSize="16sp" />

        <Button
            android:id="@+id/about_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="25dp"
            android:layout_weight="1"
            android:background="?attr/colorPrimaryDark"
            android:text="@string/title_activity_about_page"
            android:textColor="?attr/colorPrimary"
            android:textSize="16sp"
            android:onClick="toAboutPage"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>